# travm_tg_bot

./: .gitignore  post_suggest.db  pyproject.toml  requirements.txt  travm_bot.db
health_suggest_bot/: .env  bot.py  constants.py  db.py  example.env  main.py  models.py
travm_bot/: bot.py  constants.py  custom_logging.py  db.py  example.env  main.py  models.py
